k8s-problem-5/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-app
spec:
  selector:
    matchLabels:
      app: banana
  replicas: 1
  template:
    metadata:
      labels:
        app: banana
    spec:
      containers:
        - name: banana-app
          image: hashicorp/http-echo
          args:
            - "-text=banana"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-app
spec:
  selector:
    matchLabels:
      app: apple
  replicas: 1
  template:
    metadata:
      labels:
        app: apple
    spec:
      containers:
        - name: apple-app
          image: hashicorp/http-echo
          args:
            - "-text=apple"
