k8s-problem-5/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fruits-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ingress-multi-path-playground.sap.com
      http:
        paths:
          - path: /apple
            backend:
              serviceName: apple-service
              servicePort: 5678
          - path: /banana
            backend:
              serviceName: banana-service
              servicePort: 5679
